# tamago-tsunagi-draft2

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  README.ja.UTF-8.txt  README.ja.txt  configure  configure.in  docomp.el  egg-anthy.readme  egg-cnv.el  egg-com.el  egg-dotemacs  egg-edep.el  egg-mlh.el  egg-sim-old.el  egg-sim.el  egg-simv.el  egg-util.el  egg-x0213.el  egg.el  eggrc  its-keydef.el  its.el  jisx0213.el  leim-list-egg.el  leim-list.el  make-dirs.el  make-insdirs.el  menudiag.el
debian/: README.Debian  changelog  control  copyright  dirs  docs  egg-init.el  emacsen-install  emacsen-remove  rules
egg/: anthy.el  anthyipc.el  canna.el  cannarpc.el  sj3.el  sj3rpc.el  wnn.el  wnnrpc.el
helper/: Makefile  egg-helper.c
its/: ascii.el  aynu.el  bixing.el  erpin.el  hangul.el  hankata.el  hira.el  jeonkak.el  jiskana.el  kata.el  pinyin.el  quanjiao.el  thai.el  zenkaku.el  zhuyin.el
