dnl Process this file with autoconf to produce a configure script.
AC_INIT(egg.el)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

lispdir=${datadir}/emacs/site-lisp
AC_SUBST(lispdir)
AC_OUTPUT(Makefile)
